--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 .idea/
 __pycache__/
 .ipynb_checkpoints/
+src/data/norwegian1/complete.tsv.gz
+src/data/norwegian2/complete.tsv.gz
+src/data/english/corpus1/
+src/data/english/corpus2/
