--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+ax-platform==0.3.6
 beautifulsoup4==4.12.2
 conllu==4.5.3
 docopt==0.6.2
@@ -6,7 +7,8 @@ nltk==3.8.1
 numpy==1.24.4
 pandas==2.0.3
 requests==2.31.0
-scikit-learn==1.3.1
+ruptures==1.1.9
+scikit-learn==1.5.0
 scipy==1.10.1
 tqdm==4.66.3
 transformers==4.38.2
