--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ beautifulsoup4==4.12.2
 conllu==4.5.3
 docopt==0.6.2
 leven==1.0.4
-nltk==3.8.1
+nltk
 numpy==1.24.4
 pandas==2.0.3
 requests==2.32.0
